// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rtl render component should be rendered correctly in RTL direction 1`] = `
<button
  class="ant-btn ant-btn-default ant-btn-rtl"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 2`] = `
<button
  class="ant-btn ant-btn-default ant-btn-lg ant-btn-rtl"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 3`] = `
<button
  class="ant-btn ant-btn-default ant-btn-sm ant-btn-rtl"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-btn-group ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 5`] = `
<div
  class="ant-btn-group ant-btn-group-lg ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 6`] = `
<div
  class="ant-btn-group ant-btn-group-sm ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 7`] = `
<div
  class="ant-btn-group ant-btn-group-rtl"
/>
`;
